--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           </select>
         </div>
         <button type="button" class="btn btn-primary" id="btnBai2">
-          Click here
+          Result
         </button>
         <div id="result__bai2" class="result"></div>
       </div>
@@ -138,7 +138,7 @@
           />
         </div>
         <button type="button" class="btn btn-primary" id="btnBai3">
-          Click here
+          Result
         </button>
         <div id="result__bai3" class="result"></div>
       </div>
@@ -182,7 +182,7 @@
           />
         </div>
         <button type="button" class="btn btn-primary" id="btnBai4">
-          Click here
+          Loại tam giác
         </button>
         <div id="result__bai4" class="result"></div>
       </div>
